made signup and login form responsive

--- a/src/GlobalClasses.css
+++ b/src/GlobalClasses.css
@@ -34,3 +34,9 @@
   justify-content: "center";
   align-items: "center";
 }
+
+.centerChildren {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+}
